# icepop_public

./: LICENSE  README.md  pyproject.toml
icepop/: association.py  convert_score.py  data.py  enrich.py  enrichment_analysis.py  interactive.py  logging_config.py  metacell.py  model.py  specificity_score.py
icepop/cli/: main.py
notebook/: ICePop_tutorial.ipynb
run/: test.sh
