[tool.poetry]
name = "icepop"
version = "0.1.0"
description = "ICePop: metacell-based disease association framework"
authors = ["yhadevol <yh_adevol@hotmail.com>"]
license = "BSD 2-Clause License"
readme = "README.md"

packages = [{ include = "icepop" }]

include = [
    "icepop/data/**/*",
    "icepop/templates/*.ipynb"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipython = "^8.31.0"
notebook = "^7.3.2"
ipyparallel = "^9.0.0"
ipywidgets = "^8.1.5"
harmonypy = "^0.0.10"
scikit-misc = "^0.5.1"
upsetplot = "^0.9.0"
adjusttext = "^1.3.0"
fire = "^0.7.1"
numpy = "1.26.0"
alive-progress = "3.1.5"
scanpy = "1.9.6"
scipy = "1.11.3"
scikit-learn = "1.1.3"
geosketch = "1.2"
pandas = "1.5.3"
MetaQ-sc = "^1.0.6"
anndata = "0.9.2"
papermill = "^2.7.0"
itables = "^2.7.3"
plotly = "^6.6.0"
mygene = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icepop = "icepop.cli.main:main"

[project]
name = "icepop"
version = "0.1.0"
description = "ICePop: metacell-based disease association framework"
requires-python = ">=3.11,<3.12"
